// Copyright 2022 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package poros;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "poros/api/proto/resources.proto";

option go_package = "infra/appengine/poros/api/proto;proto";

// Performs operations on Assets.
service Asset {
  // Creates the given Asset.
  rpc Create(CreateAssetRequest) returns (CreateAssetResponse);

  // Retrieves a Asset for a given unique value.
  rpc Get(GetAssetRequest) returns (AssetModel);

  // Update a single asset in EnterpriseAsset.
  rpc Update(UpdateAssetRequest) returns (UpdateAssetResponse);

  // Deletes the given Asset.
  rpc Delete(DeleteAssetRequest) returns (.google.protobuf.Empty);

  // Lists all Assets.
  rpc List(ListAssetsRequest) returns (ListAssetsResponse);

  // Get AssetConfiguration
  rpc GetAssetConfiguration(GetAssetConfigurationRequest)
      returns (GetAssetConfigurationResponse);

  // Get HostConfiguration
  rpc GetHostConfiguration(GetHostConfigurationRequest)
      returns (GetHostConfigurationResponse);
}
// Request to create a single asset in AssetServ
message CreateAssetRequest {
  // The new asset to add to the database.
  string name = 1;
  string description = 2;
  // The list of AssetReource to create/update
  repeated AssetResourceModel asset_resources_to_save = 3;

}

message CreateAssetResponse {
  // The Asset created.
  AssetModel asset = 1;
  // The list of AssetResources created/updated
  repeated AssetResourceModel asset_resources = 2;
}

// Gets a Asset resource.
message GetAssetRequest {
  // The unique identifier of the asset to retrieve.
  // Format: publishers/{publisher}/assets/{asset}
  string asset_id = 1;
}

// Request to update a single asset in EnterpriseAsset.
message UpdateAssetRequest {
  // The existing asset to update in the database.
  AssetModel asset = 1;
  // The list of fields to update the asset.
  .google.protobuf.FieldMask asset_update_mask = 2;
  // The list of fields to update the asset_resource.
  .google.protobuf.FieldMask asset_resource_update_mask = 3;
  // The list of AssetReource to create
  repeated AssetResourceModel asset_resources_to_save = 4;
  // The list of AssetReource to delete
  repeated AssetResourceModel asset_resources_to_delete = 5;
}

message UpdateAssetResponse {
  // The Asset updated.
  AssetModel asset = 1;
  // The list of AssetResources created/updated
  repeated AssetResourceModel asset_resources = 2;
}

// Request to delete a single asset from EnterpriseAsset.
message DeleteAssetRequest {
  // The unique identifier of the asset to delete from the database.
  string asset_id = 1;
}

// Request to list all assets in EnterpriseAsset.
message ListAssetsRequest {
  // Fields to include on each result
  .google.protobuf.FieldMask read_mask = 1;

  // Number of results per page
  int32 page_size = 2;

  // Page token from a previous page's ListAssetsResponse
  string page_token = 3;
}

// Response to ListAssetsRequest.
message ListAssetsResponse {
  // The result set.
  repeated AssetModel assets = 1;

  // A page token that can be passed into future requests to get the next page.
  // Empty if there is no next page.
  string next_page_token = 2;
}
// request for get the asset configuration by asset id
message GetAssetConfigurationRequest {
  // The unique identifier of the asset to retrieve.
  string asset_id = 1;
}

message GetAssetConfigurationResponse {
  // The configuration for the asset.
  string config = 1;
}

message AssetConfigurationResource {
  // Unique Identifier of the Resource
  string resource_id = 1;
  // Operating System of the Resource (windows_machine, linux_machine, etc.)
  string operating_system = 2;
  // Alias Name of the resource
  string alias_name = 3;
  // Name of the resource
  string machine_type = 4;
}

message AssetConfiguration {
  string asset_id = 1;
  repeated AssetConfigurationResource resources = 2;
}

// request to get the host configuration by resource id
message GetHostConfigurationRequest {
  // The unique identifier of the resource to retrieve.
  repeated string resource_ids = 1;
}

message GetHostConfigurationResponse {
  string config = 1;
}

// response to GetHostConfigurationRequest
message HostConfigurationResource {
  // Unique Identifier of the Resource
  string resource_id = 1;
  // Name of the Resource
  string resource_name = 2;
  // Image information about the source
  string resource_image = 3;
}

message HostConfiguration {
  repeated HostConfigurationResource resources = 1;
}
